# ianaio-worker-macros

./: Cargo.toml  LICENSE.txt  README.md
src/: lib.rs  oneshot.rs  reactor.rs  worker_fn.rs
tests/: oneshot.rs  reactor.rs
tests/oneshot/: basic-pass.rs  many_input-fail.rs  many_input-fail.stderr  no_input-fail.rs  no_input-fail.stderr  sync-pass.rs
tests/reactor/: basic-pass.rs  many_input-fail.rs  return_type-fail.rs  return_type-fail.stderr  sync-fail.rs  sync-fail.stderr
